--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 142,
    "id": "ba3d7610",
    "metadata": {},
    "outputs": [],
@@ -22,20 +22,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 143,
    "id": "f7ed6ae2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Відкриваємо файли\n",
     "cap = cv2.VideoCapture(\"data/Match.mp4\")\n",
-    "template = cv2.imread(\"data/template2.png\", 0)\n",
+    "template = cv2.imread(\"data/template.png\", 0)\n",
     "h, w = template.shape[:2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 144,
+   "id": "7c3ea78b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_size = (1080, 1920)\n",
+    "fourcc = cv2.VideoWriter_fourcc(*'mp4v')  # або 'XVID' для .avi\n",
+    "out = cv2.VideoWriter('data/output.mp4', fourcc, 30.0, output_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
    "id": "4bc78f43",
    "metadata": {},
    "outputs": [],
@@ -52,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "id": "b3fbd3e4",
    "metadata": {},
    "outputs": [],
@@ -71,21 +83,24 @@
     "    min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(res)\n",
     "\n",
     "    # якщо результат співпадіння перевищує трешхолд — об'єкт знайдено\n",
-    "    threshold = 0.6\n",
+    "    threshold = 0.83\n",
     "    if max_val >= threshold:\n",
     "        top_left = max_loc\n",
     "        h, w = template.shape\n",
     "        bottom_right = (top_left[0] + w, top_left[1] + h)\n",
     "\n",
     "        # малюю прямокутник навколо знайденого об'єкта\n",
-    "        cv2.rectangle(warped, top_left, bottom_right, (0, 255, 0), 2)\n",
+    "        cv2.rectangle(warped, top_left, bottom_right, (255, 0, 0), 2)\n",
     "        \n",
     "        # підписую знайдений об'єкт\n",
-    "        cv2.putText(warped, \"Ball\", (top_left[0], top_left[1] - 10),\n",
-    "                    cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 255, 0), 2)\n",
+    "        cv2.putText(warped, f\"{max_val:.3f}\", (top_left[0], top_left[1] - 10),\n",
+    "                    cv2.FONT_HERSHEY_SIMPLEX, 0.6, (255, 0, 0), 2)\n",
     "\n",
+    "    # Записуємо оброблений кадр у відео\n",
+    "    out.write(warped)\n",
+    "    \n",
     "    # зменшую розмір кадру в 2 рази для зручного перегляду\n",
-    "    scaled_warped = cv2.resize(warped, (0, 0), fx=0.5, fy=0.5)\n",
+    "    scaled_warped = cv2.resize(warped, (0, 0), fx=1, fy=1)\n",
     "    cv2.imshow(\"Warped View\", scaled_warped)\n",
     "\n",
     "    # вихід по клавіші Esc\n",
@@ -93,6 +108,7 @@
     "        break\n",
     "\n",
     "cap.release()\n",
+    "out.release()\n",
     "cv2.destroyAllWindows()"
    ]
   }
