--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "id": "ba3d7610",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "id": "f7ed6ae2",
    "metadata": {},
    "outputs": [],
@@ -35,19 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "id": "7c3ea78b",
    "metadata": {},
    "outputs": [],
    "source": [
     "output_size = (1080, 1920)\n",
-    "fourcc = cv2.VideoWriter_fourcc(*'mp4v')  # або 'XVID' для .avi\n",
-    "out = cv2.VideoWriter('data/output.mp4', fourcc, 30.0, output_size)"
+    "fourcc = cv2.VideoWriter_fourcc(*'mp4v')\n",
+    "out = cv2.VideoWriter('data/output2.mp4', fourcc, 30.0, output_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 4,
    "id": "4bc78f43",
    "metadata": {},
    "outputs": [],
@@ -64,11 +64,539 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "id": "b3fbd3e4",
+   "execution_count": 5,
+   "id": "e6d0357a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Параметри для Lucas-Kanade Optical Flow\n",
+    "lk_params = dict(winSize=(15, 15), maxLevel=2,\n",
+    "                 criteria=(cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, 10, 0.03))\n",
+    "\n",
+    "tracking = None\n",
+    "prev_gray = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "824071f3",
+   "metadata": {},
+   "source": [
+    "⚠️ **To Fix:** Трекінг в цілому працює, але коли гравець різко б'є по м'ячу, то трекінг переключається на гравця і застрягає на ньому"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b3fbd3e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 0.768\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.782\n",
+      "accuracy: 0.761\n",
+      "accuracy: 0.763\n",
+      "accuracy: 0.771\n",
+      "accuracy: 0.769\n",
+      "accuracy: 0.780\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.790\n",
+      "accuracy: 0.772\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.791\n",
+      "accuracy: 0.785\n",
+      "accuracy: 0.777\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.782\n",
+      "accuracy: 0.807\n",
+      "accuracy: 0.796\n",
+      "accuracy: 0.784\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.777\n",
+      "accuracy: 0.775\n",
+      "accuracy: 0.772\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.758\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.777\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.780\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.790\n",
+      "accuracy: 0.785\n",
+      "accuracy: 0.777\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.785\n",
+      "accuracy: 0.765\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.790\n",
+      "accuracy: 0.793\n",
+      "accuracy: 0.796\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.765\n",
+      "accuracy: 0.762\n",
+      "accuracy: 0.800\n",
+      "accuracy: 0.790\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.778\n",
+      "accuracy: 0.779\n",
+      "accuracy: 0.772\n",
+      "accuracy: 0.785\n",
+      "accuracy: 0.780\n",
+      "accuracy: 0.775\n",
+      "accuracy: 0.777\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.800\n",
+      "accuracy: 0.784\n",
+      "accuracy: 0.777\n",
+      "accuracy: 0.781\n",
+      "accuracy: 0.790\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.789\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.778\n",
+      "accuracy: 0.792\n",
+      "accuracy: 0.781\n",
+      "accuracy: 0.788\n",
+      "accuracy: 0.781\n",
+      "accuracy: 0.779\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.789\n",
+      "accuracy: 0.788\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.780\n",
+      "accuracy: 0.785\n",
+      "accuracy: 0.782\n",
+      "accuracy: 0.767\n",
+      "accuracy: 0.777\n",
+      "accuracy: 0.769\n",
+      "accuracy: 0.788\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.777\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.755\n",
+      "accuracy: 0.799\n",
+      "accuracy: 0.808\n",
+      "accuracy: 0.805\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.787\n",
+      "accuracy: 0.797\n",
+      "accuracy: 0.787\n",
+      "accuracy: 0.797\n",
+      "accuracy: 0.797\n",
+      "accuracy: 0.787\n",
+      "accuracy: 0.800\n",
+      "accuracy: 0.799\n",
+      "accuracy: 0.802\n",
+      "accuracy: 0.791\n",
+      "accuracy: 0.806\n",
+      "accuracy: 0.788\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.797\n",
+      "accuracy: 0.788\n",
+      "accuracy: 0.785\n",
+      "accuracy: 0.792\n",
+      "accuracy: 0.795\n",
+      "accuracy: 0.799\n",
+      "accuracy: 0.802\n",
+      "accuracy: 0.792\n",
+      "accuracy: 0.790\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.768\n",
+      "accuracy: 0.791\n",
+      "accuracy: 0.750\n",
+      "accuracy: 0.742\n",
+      "accuracy: 0.744\n",
+      "accuracy: 0.751\n",
+      "accuracy: 0.744\n",
+      "accuracy: 0.746\n",
+      "accuracy: 0.761\n",
+      "accuracy: 0.782\n",
+      "accuracy: 0.746\n",
+      "accuracy: 0.739\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.815\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.805\n",
+      "accuracy: 0.809\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.796\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.792\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.802\n",
+      "accuracy: 0.794\n",
+      "accuracy: 0.788\n",
+      "accuracy: 0.795\n",
+      "accuracy: 0.794\n",
+      "accuracy: 0.796\n",
+      "accuracy: 0.792\n",
+      "accuracy: 0.810\n",
+      "accuracy: 0.809\n",
+      "accuracy: 0.812\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.793\n",
+      "accuracy: 0.793\n",
+      "accuracy: 0.808\n",
+      "accuracy: 0.807\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.813\n",
+      "accuracy: 0.814\n",
+      "accuracy: 0.822\n",
+      "accuracy: 0.813\n",
+      "accuracy: 0.812\n",
+      "accuracy: 0.812\n",
+      "accuracy: 0.812\n",
+      "accuracy: 0.812\n",
+      "accuracy: 0.799\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.800\n",
+      "accuracy: 0.810\n",
+      "accuracy: 0.819\n",
+      "accuracy: 0.820\n",
+      "accuracy: 0.820\n",
+      "accuracy: 0.814\n",
+      "accuracy: 0.802\n",
+      "accuracy: 0.810\n",
+      "accuracy: 0.802\n",
+      "accuracy: 0.813\n",
+      "accuracy: 0.810\n",
+      "accuracy: 0.816\n",
+      "accuracy: 0.810\n",
+      "accuracy: 0.809\n",
+      "accuracy: 0.802\n",
+      "accuracy: 0.809\n",
+      "accuracy: 0.809\n",
+      "accuracy: 0.800\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.813\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.811\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.814\n",
+      "accuracy: 0.808\n",
+      "accuracy: 0.807\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.812\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.808\n",
+      "accuracy: 0.807\n",
+      "accuracy: 0.813\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.794\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.802\n",
+      "accuracy: 0.796\n",
+      "accuracy: 0.795\n",
+      "accuracy: 0.806\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.792\n",
+      "accuracy: 0.802\n",
+      "accuracy: 0.797\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.807\n",
+      "accuracy: 0.797\n",
+      "accuracy: 0.794\n",
+      "accuracy: 0.790\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.806\n",
+      "accuracy: 0.803\n",
+      "accuracy: 0.810\n",
+      "accuracy: 0.792\n",
+      "accuracy: 0.786\n",
+      "accuracy: 0.795\n",
+      "accuracy: 0.797\n",
+      "accuracy: 0.797\n",
+      "accuracy: 0.799\n",
+      "accuracy: 0.809\n",
+      "accuracy: 0.809\n",
+      "accuracy: 0.810\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.814\n",
+      "accuracy: 0.794\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.808\n",
+      "accuracy: 0.815\n",
+      "accuracy: 0.809\n",
+      "accuracy: 0.809\n",
+      "accuracy: 0.808\n",
+      "accuracy: 0.812\n",
+      "accuracy: 0.806\n",
+      "accuracy: 0.812\n",
+      "accuracy: 0.817\n",
+      "accuracy: 0.815\n",
+      "accuracy: 0.796\n",
+      "accuracy: 0.805\n",
+      "accuracy: 0.813\n",
+      "accuracy: 0.808\n",
+      "accuracy: 0.800\n",
+      "accuracy: 0.802\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.812\n",
+      "accuracy: 0.809\n",
+      "accuracy: 0.794\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.797\n",
+      "accuracy: 0.796\n",
+      "accuracy: 0.785\n",
+      "accuracy: 0.791\n",
+      "accuracy: 0.781\n",
+      "accuracy: 0.790\n",
+      "accuracy: 0.789\n",
+      "accuracy: 0.785\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.800\n",
+      "accuracy: 0.822\n",
+      "accuracy: 0.808\n",
+      "accuracy: 0.809\n",
+      "accuracy: 0.806\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.807\n",
+      "accuracy: 0.810\n",
+      "accuracy: 0.803\n",
+      "accuracy: 0.800\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.806\n",
+      "accuracy: 0.794\n",
+      "accuracy: 0.797\n",
+      "accuracy: 0.794\n",
+      "accuracy: 0.807\n",
+      "accuracy: 0.802\n",
+      "accuracy: 0.801\n",
+      "accuracy: 0.820\n",
+      "accuracy: 0.820\n",
+      "accuracy: 0.809\n",
+      "accuracy: 0.796\n",
+      "accuracy: 0.807\n",
+      "accuracy: 0.797\n",
+      "accuracy: 0.758\n",
+      "accuracy: 0.755\n",
+      "accuracy: 0.761\n",
+      "accuracy: 0.763\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.763\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.785\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.766\n",
+      "accuracy: 0.765\n",
+      "accuracy: 0.764\n",
+      "accuracy: 0.765\n",
+      "accuracy: 0.797\n",
+      "accuracy: 0.784\n",
+      "accuracy: 0.786\n",
+      "accuracy: 0.778\n",
+      "accuracy: 0.763\n",
+      "accuracy: 0.769\n",
+      "accuracy: 0.755\n",
+      "accuracy: 0.758\n",
+      "accuracy: 0.769\n",
+      "accuracy: 0.789\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.779\n",
+      "accuracy: 0.778\n",
+      "accuracy: 0.771\n",
+      "accuracy: 0.780\n",
+      "accuracy: 0.769\n",
+      "accuracy: 0.762\n",
+      "accuracy: 0.777\n",
+      "accuracy: 0.777\n",
+      "accuracy: 0.764\n",
+      "accuracy: 0.764\n",
+      "accuracy: 0.765\n",
+      "accuracy: 0.779\n",
+      "accuracy: 0.760\n",
+      "accuracy: 0.767\n",
+      "accuracy: 0.772\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.779\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.763\n",
+      "accuracy: 0.754\n",
+      "accuracy: 0.758\n",
+      "accuracy: 0.768\n",
+      "accuracy: 0.782\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.790\n",
+      "accuracy: 0.763\n",
+      "accuracy: 0.766\n",
+      "accuracy: 0.764\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.771\n",
+      "accuracy: 0.767\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.766\n",
+      "accuracy: 0.753\n",
+      "accuracy: 0.762\n",
+      "accuracy: 0.772\n",
+      "accuracy: 0.764\n",
+      "accuracy: 0.758\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.756\n",
+      "accuracy: 0.766\n",
+      "accuracy: 0.772\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.779\n",
+      "accuracy: 0.792\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.775\n",
+      "accuracy: 0.772\n",
+      "accuracy: 0.775\n",
+      "accuracy: 0.781\n",
+      "accuracy: 0.784\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.764\n",
+      "accuracy: 0.775\n",
+      "accuracy: 0.793\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.771\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.760\n",
+      "accuracy: 0.777\n",
+      "accuracy: 0.768\n",
+      "accuracy: 0.766\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.766\n",
+      "accuracy: 0.765\n",
+      "accuracy: 0.780\n",
+      "accuracy: 0.771\n",
+      "accuracy: 0.767\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.775\n",
+      "accuracy: 0.786\n",
+      "accuracy: 0.781\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.763\n",
+      "accuracy: 0.789\n",
+      "accuracy: 0.765\n",
+      "accuracy: 0.794\n",
+      "accuracy: 0.775\n",
+      "accuracy: 0.771\n",
+      "accuracy: 0.764\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.768\n",
+      "accuracy: 0.775\n",
+      "accuracy: 0.779\n",
+      "accuracy: 0.783\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.768\n",
+      "accuracy: 0.781\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.781\n",
+      "accuracy: 0.771\n",
+      "accuracy: 0.777\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.762\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.766\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.768\n",
+      "accuracy: 0.782\n",
+      "accuracy: 0.794\n",
+      "accuracy: 0.779\n",
+      "accuracy: 0.772\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.767\n",
+      "accuracy: 0.778\n",
+      "accuracy: 0.791\n",
+      "accuracy: 0.796\n",
+      "accuracy: 0.765\n",
+      "accuracy: 0.760\n",
+      "accuracy: 0.804\n",
+      "accuracy: 0.776\n",
+      "accuracy: 0.780\n",
+      "accuracy: 0.771\n",
+      "accuracy: 0.759\n",
+      "accuracy: 0.762\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.854\n",
+      "accuracy: 0.780\n",
+      "accuracy: 0.786\n",
+      "accuracy: 0.823\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.781\n",
+      "accuracy: 0.769\n",
+      "accuracy: 0.829\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.778\n",
+      "accuracy: 0.773\n",
+      "accuracy: 0.765\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.772\n",
+      "accuracy: 0.764\n",
+      "accuracy: 0.762\n",
+      "accuracy: 0.762\n",
+      "accuracy: 0.780\n",
+      "accuracy: 0.798\n",
+      "accuracy: 0.772\n",
+      "accuracy: 0.820\n",
+      "accuracy: 0.860\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.770\n",
+      "accuracy: 0.835\n",
+      "accuracy: 0.837\n",
+      "accuracy: 0.763\n",
+      "accuracy: 0.765\n",
+      "accuracy: 0.769\n",
+      "accuracy: 0.769\n",
+      "accuracy: 0.761\n",
+      "accuracy: 0.755\n",
+      "accuracy: 0.765\n",
+      "accuracy: 0.761\n",
+      "accuracy: 0.763\n",
+      "accuracy: 0.774\n",
+      "accuracy: 0.857\n",
+      "accuracy: 0.767\n",
+      "accuracy: 0.767\n",
+      "accuracy: 0.764\n",
+      "accuracy: 0.760\n",
+      "accuracy: 0.868\n"
+     ]
+    }
+   ],
+   "source": [
+    "threshold = 0.83  # для шаблонного пошуку\n",
     "while True:\n",
     "    ret, frame = cap.read()\n",
     "    if not ret:\n",
@@ -77,27 +605,41 @@
     "    # перетворення перспективи до кадру\n",
     "    warped = cv2.warpPerspective(frame, H, (1080, 1920))\n",
     "    gray = cv2.cvtColor(warped, cv2.COLOR_BGR2GRAY) # у сірий\n",
+    "    \n",
+    "    if tracking is None:\n",
+    "        # якщо трекінг не активний — шукаємо м'яч через шаблон\n",
+    "        res = cv2.matchTemplate(gray, template, cv2.TM_CCOEFF_NORMED)\n",
+    "        min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(res)\n",
+    "        print(f\"accuracy: {max_val:.3f}\")\n",
     "\n",
-    "    # шукаю шаблон на кадрі\n",
-    "    res = cv2.matchTemplate(gray, template, cv2.TM_CCOEFF_NORMED)\n",
-    "    min_val, max_val, min_loc, max_loc = cv2.minMaxLoc(res)\n",
-    "\n",
-    "    # якщо результат співпадіння перевищує трешхолд — об'єкт знайдено\n",
-    "    threshold = 0.83\n",
-    "    if max_val >= threshold:\n",
-    "        top_left = max_loc\n",
-    "        h, w = template.shape\n",
-    "        bottom_right = (top_left[0] + w, top_left[1] + h)\n",
-    "\n",
-    "        # малюю прямокутник навколо знайденого об'єкта\n",
-    "        cv2.rectangle(warped, top_left, bottom_right, (255, 0, 0), 2)\n",
+    "        # якщо результат співпадіння перевищує трешхолд — об'єкт знайдено\n",
+    "        if max_val >= threshold:\n",
+    "            top_left = max_loc\n",
+    "            \n",
+    "            bottom_right = (top_left[0] + w, top_left[1] + h)\n",
+    "            center_x = top_left[0] + w // 2\n",
+    "            center_y = top_left[1] + h // 2\n",
+    "            tracking = np.array([[center_x, center_y]], dtype=np.float32)\n",
+    "            \n",
+    "            cv2.rectangle(warped, top_left, bottom_right, (255, 0, 0), 2)\n",
+    "            cv2.putText(warped, f'Detected {max_val:.3f}', (top_left[0], top_left[1] - 10),\n",
+    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.6, (255, 0, 0), 2)\n",
+    "    else:\n",
+    "        # Трекінг за допомогою Optical Flow\n",
+    "        next_point, status, _ = cv2.calcOpticalFlowPyrLK(prev_gray, gray, tracking, None, **lk_params)\n",
     "        \n",
-    "        # підписую знайдений об'єкт\n",
-    "        cv2.putText(warped, f\"{max_val:.3f}\", (top_left[0], top_left[1] - 10),\n",
-    "                    cv2.FONT_HERSHEY_SIMPLEX, 0.6, (255, 0, 0), 2)\n",
+    "        if status[0][0] == 1:\n",
+    "            x, y = next_point[0]\n",
+    "            tracking = next_point\n",
+    "            cv2.circle(warped, (int(x), int(y)), 10, (0, 0, 255), 2)\n",
+    "            cv2.putText(warped, \"Ball (tracked)\", (int(x) + 10, int(y)),\n",
+    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.6, (0, 0, 255), 2)\n",
+    "        else:\n",
+    "            tracking = None  # Втрата трекінгу\n",
     "\n",
     "    # Записуємо оброблений кадр у відео\n",
     "    out.write(warped)\n",
+    "    prev_gray = gray.copy()\n",
     "    \n",
     "    # зменшую розмір кадру в 2 рази для зручного перегляду\n",
     "    scaled_warped = cv2.resize(warped, (0, 0), fx=1, fy=1)\n",
