--- a/main.ipynb
+++ b/main.ipynb
@@ -10,19 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "ba3d7610",
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from ultralytics import YOLO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "f7ed6ae2",
    "metadata": {},
    "outputs": [],
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "7c3ea78b",
    "metadata": {},
    "outputs": [],
@@ -43,12 +44,12 @@
     "# Output data\n",
     "output_size = (1080, 1920)\n",
     "fourcc = cv2.VideoWriter.fourcc(*\"mp4v\")\n",
-    "out = cv2.VideoWriter(\"data/output2.mp4\", fourcc, 30.0, output_size)"
+    "out = cv2.VideoWriter(\"data/output_yolo.mp4\", fourcc, 30.0, output_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "4bc78f43",
    "metadata": {},
    "outputs": [],
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "e6d0357a",
    "metadata": {},
    "outputs": [],
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "e676ebf5",
    "metadata": {},
    "outputs": [],
@@ -281,7 +282,7 @@
    "id": "f1021cec",
    "metadata": {},
    "source": [
-    "Gates tracking"
+    "## Gates tracking"
    ]
   },
   {
@@ -556,11 +557,88 @@
     "for frame_idx, coords in goals_results:\n",
     "    print(f\"Frame {frame_idx}: {coords}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8e89643",
+   "metadata": {},
+   "source": [
+    "## Ball tracking using **YOLO**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46ce7862",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = YOLO(\"weights/best.pt\")\n",
+    "\n",
+    "\n",
+    "while True:\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    # Apply perspective transformation\n",
+    "    warped = cv2.warpPerspective(frame, H, (1080, 1920))\n",
+    "\n",
+    "    # Get tracking results from YOLO\n",
+    "    results = model.track(warped, persist=True, conf=0.5)[0]\n",
+    "\n",
+    "    # Check if the model found an object\n",
+    "    if results and results.boxes is not None:\n",
+    "        for box in results.boxes:\n",
+    "            cls_id = int(box.cls[0])\n",
+    "            conf = float(box.conf[0])\n",
+    "            x1, y1, x2, y2 = map(int, box.xyxy[0])\n",
+    "\n",
+    "            # Rectangle Drawing\n",
+    "            cv2.rectangle(warped, (x1, y1), (x2, y2), (255, 0, 0), 2)\n",
+    "            cv2.putText(\n",
+    "                warped,\n",
+    "                f\"Ball {conf:.2f}\",\n",
+    "                (x1, y1 - 10),\n",
+    "                cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "                0.6,\n",
+    "                (255, 0, 0),\n",
+    "                2,\n",
+    "            )\n",
+    "\n",
+    "            # Center of the object\n",
+    "            center = ((x1 + x2) // 2, (y1 + y2) // 2)\n",
+    "            last_valid_positions.append(center)\n",
+    "            if len(last_valid_positions) > max_positions:\n",
+    "                last_valid_positions.pop(0)\n",
+    "\n",
+    "            # Trajectory drawing\n",
+    "            for i in range(1, len(last_valid_positions)):\n",
+    "                cv2.line(\n",
+    "                    warped,\n",
+    "                    last_valid_positions[i - 1],\n",
+    "                    last_valid_positions[i],\n",
+    "                    (0, 0, 255),\n",
+    "                    2,\n",
+    "                )\n",
+    "\n",
+    "            break  # Only first found object\n",
+    "\n",
+    "    # Write the frame to the output\n",
+    "    out.write(warped)\n",
+    "\n",
+    "    # # Показ\n",
+    "    # scaled_warped = cv2.resize(warped, (0, 0), fx=0.4, fy=0.4)\n",
+    "    # cv2.imshow(\"Warped View\", scaled_warped)\n",
+    "\n",
+    "    # if cv2.waitKey(30) & 0xFF == 27:\n",
+    "    #     break"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -574,7 +652,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
