updated yolo to use bytetrack and decreased confidence

--- a/main.ipynb
+++ b/main.ipynb
@@ -690,10 +690,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6640efe0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DONE] 1627 frames processed at 9.3 FPS\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "from pathlib import Path\n",
@@ -973,7 +981,15 @@
     "        warped = cv2.warpPerspective(frame, H, warp_dims)\n",
     "  \n",
     "        # ---- YOLO Ball Detection ----\n",
-    "        results = ball_model.track(warped, persist=True, conf=0.5)[0]\n",
+    "        results = ball_model.track(\n",
+    "            warped, \n",
+    "            persist=True, \n",
+    "            conf=0.3,  # Lower this if needed\n",
+    "            tracker=\"bytetrack.yaml\",  # or \"bytetrack.yaml\"\n",
+    "            imgsz=640,  # Match your model's training size\n",
+    "            iou=0.3,  # Adjust intersection over union threshold\n",
+    "            verbose=False\n",
+    "        )[0]\n",
     "        if results and results.boxes is not None:\n",
     "            for box in results.boxes:\n",
     "                cls_id = int(box.cls[0])\n",
@@ -1042,7 +1058,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
