Enhance goal detection and scoring system in soccer video processing
- Updated execution count for initial processing output.
- Modified goal detection output to include multiple goal events.
- Changed draw_black_goal function to return goal coordinates.
- Adjusted goal detection logic to prevent double scoring.
- Implemented scoring system for Player 1 and Player 2 with cooldown mechanism.
- Added visual feedback for detected goals and current scores on the video frame.
- Updated Python version in notebook metadata.

--- a/main.ipynb
+++ b/main.ipynb
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "6640efe0",
    "metadata": {},
    "outputs": [
@@ -698,7 +698,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DONE] 1627 frames processed at 9.3 FPS\n"
+      "⚽ Goal for Player 2!\n",
+      "⚽ Goal for Player 2!\n",
+      "⚽ Goal for Player 2!\n",
+      "⚽ Goal for Player 1!\n",
+      "⚽ Goal for Player 2!\n",
+      "⚽ Goal for Player 2!\n",
+      "⚽ Goal for Player 2!\n",
+      "⚽ Goal for Player 2!\n",
+      "⚽ Goal for Player 1!\n",
+      "⚽ Goal for Player 1!\n",
+      "⚽ Goal for Player 1!\n",
+      "⚽ Goal for Player 1!\n",
+      "⚽ Goal for Player 1!\n",
+      "⚽ Goal for Player 1!\n",
+      "⚽ Goal for Player 2!\n",
+      "⚽ Goal for Player 1!\n",
+      "⚽ Goal for Player 2!\n",
+      "⚽ Goal for Player 2!\n",
+      "[DONE] 10327 frames processed at 14.4 FPS\n"
      ]
     }
    ],
@@ -850,9 +868,10 @@
     "                self.last_posts = measurement\n",
     "        return self.last_posts\n",
     "\n",
-    "def draw_black_goal(frame: np.ndarray) -> None:\n",
+    "def draw_black_goal(frame: np.ndarray) -> Optional[Tuple[Tuple[int, int], Tuple[int, int]]]:\n",
     "    \"\"\"\n",
     "    Detects and draws a fixed black-area (goal) on the given frame.\n",
+    "    Returns the top-left and bottom-right coordinates of the detected goal, or None if not found.\n",
     "    \"\"\"\n",
     "    h, w = frame.shape[:2]\n",
     "    hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
@@ -862,13 +881,15 @@
     "    for cnt in cnts:\n",
     "        area = cv2.contourArea(cnt)\n",
     "        x, y, bw, bh = cv2.boundingRect(cnt)\n",
+    "        y += 50\n",
     "        if not ((w * 0.05) * (h * 0.015) < area < (w * 0.15) * (h * 0.045)):\n",
     "            continue\n",
     "        ar = bw / bh\n",
     "        if not (2.5 < ar < 6.0) or not (y + bh / 2 < h * 0.25) or not (w * 0.3 < x + bw / 2 < w * 0.7):\n",
     "            continue\n",
     "        cv2.rectangle(frame, (x, y), (x + bw, y + bh), (255, 0, 255), 2)\n",
-    "        break\n",
+    "        return (x, y), (x + bw, y + bh)\n",
+    "    return None\n",
     "\n",
     "def overlay_pitch_info(frame: np.ndarray, corners: np.ndarray) -> None:\n",
     "    \"\"\"\n",
@@ -924,7 +945,7 @@
     "\n",
     "    if posts:\n",
     "        left_post, right_post = posts\n",
-    "        goal_tl = (xL + left_post, strip_top)\n",
+    "        goal_tl = (xL + left_post, strip_top+20)\n",
     "        goal_br = (xL + right_post, yB)\n",
     "        cv2.rectangle(frame, goal_tl, goal_br, (255, 0, 255), 2)\n",
     "        return goal_tl, goal_br\n",
@@ -972,6 +993,13 @@
     "    \n",
     "    frame_idx = 0\n",
     "    start_time = time.time()\n",
+    "    goal_cooldown = 0  # Prevents double-scoring\n",
+    "    player1_score = 0  # Top player\n",
+    "    player2_score = 0  # Bottom player\n",
+    "    ball_inside_bottom_goal = False\n",
+    "    ball_inside_upper_goal = False\n",
+    "    missing_counter = 0\n",
+    "    max_missing_frames = 5 \n",
     "    \n",
     "    while True:\n",
     "        ret, frame = cap.read()\n",
@@ -979,6 +1007,17 @@
     "            break\n",
     "\n",
     "        warped = cv2.warpPerspective(frame, H, warp_dims)\n",
+    "\n",
+    "     \n",
+    "\n",
+    "        # ---- Pitch & Goal-Post Detection ----\n",
+    "        pitch_corners, current_gray = update_pitch_corners(warped, pitch_corners, prev_gray, frame_idx, lk_params)\n",
+    "        bottom_gate_coords = detect_goal_in_frame(warped, pitch_corners, post_tracker)\n",
+    "        if bottom_gate_coords:\n",
+    "            cv2.putText(warped, \"Goal Detected\", (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 255), 2)\n",
+    "  \n",
+    "        upper_gate_coords = draw_black_goal(warped)\n",
+    "        overlay_pitch_info(warped, pitch_corners)\n",
     "  \n",
     "        # ---- YOLO Ball Detection ----\n",
     "        results = ball_model.track(\n",
@@ -1007,20 +1046,65 @@
     "                if len(last_valid_positions) > max_positions:\n",
     "                    last_valid_positions.pop(0)\n",
     "  \n",
+    "                # # Check if ball is in bottom gate (goal for Player 2)\n",
+    "                # if goal_cooldown == 0 and bottom_gate_coords:\n",
+    "                #     gate_tl, gate_br = bottom_gate_coords\n",
+    "                #     if gate_tl[0] <= center[0] <= gate_br[0] and gate_tl[1] <= center[1] <= gate_br[1]:\n",
+    "                #         player2_score += 1\n",
+    "                #         print(f\"GOAL for Player 2! Score: {player1_score} - {player2_score}\")\n",
+    "                        \n",
+    "                # # Check if ball is in upper gate (goal for Player 1)\n",
+    "                # if goal_cooldown == 0 and upper_gate_coords:\n",
+    "                #     upper_gate_tl, upper_gate_br = upper_gate_coords\n",
+    "                #     if upper_gate_tl[0] <= center[0] <= upper_gate_br[0] and upper_gate_tl[1] <= center[1] <= upper_gate_br[1]:\n",
+    "                #         player1_score += 1\n",
+    "                #         print(f\"GOAL for Player 1! Score: {player1_score} - {player2_score}\")\n",
+    "\n",
     "                # Draw trajectory lines.\n",
     "                for i in range(1, len(last_valid_positions)):\n",
     "                    cv2.line(warped, last_valid_positions[i - 1], last_valid_positions[i], (0, 0, 255), 2)\n",
     "                break  # Only process the first detected ball\n",
     "\n",
-    "        # ---- Pitch & Goal-Post Detection ----\n",
-    "        pitch_corners, current_gray = update_pitch_corners(warped, pitch_corners, prev_gray, frame_idx, lk_params)\n",
-    "        goal_coords = detect_goal_in_frame(warped, pitch_corners, post_tracker)\n",
-    "        if goal_coords:\n",
-    "            cv2.putText(warped, \"Goal Detected\", (10, 30), cv2.FONT_HERSHEY_SIMPLEX, 1, (0, 255, 255), 2)\n",
-    "  \n",
-    "        draw_black_goal(warped)\n",
-    "        overlay_pitch_info(warped, pitch_corners)\n",
-    "  \n",
+    "        if goal_cooldown > 0:\n",
+    "            goal_cooldown -= 1\n",
+    "\n",
+    "        if results and results.boxes is not None:\n",
+    "            missing_counter = 0\n",
+    "            cx, cy = last_valid_positions[-1]\n",
+    "\n",
+    "            if bottom_gate_coords:\n",
+    "                x1, y1 = bottom_gate_coords[0]\n",
+    "                x2, y2 = bottom_gate_coords[1]\n",
+    "                if x1 < cx < x2 and y1 < cy < y2:\n",
+    "                    ball_inside_bottom_goal = True\n",
+    "\n",
+    "            if upper_gate_coords:\n",
+    "                x1, y1 = upper_gate_coords[0]\n",
+    "                x2, y2 = upper_gate_coords[1]\n",
+    "                if x1 < cx < x2 and y1 < cy < y2:\n",
+    "                    ball_inside_upper_goal = True\n",
+    "        else:\n",
+    "            missing_counter += 1\n",
+    "            if missing_counter > max_missing_frames and goal_cooldown == 0:\n",
+    "                if ball_inside_bottom_goal:\n",
+    "                    player1_score += 1\n",
+    "                    print(\"⚽ Goal for Player 1!\")\n",
+    "                    goal_cooldown = 10 \n",
+    "                if ball_inside_upper_goal:\n",
+    "                    player2_score += 1\n",
+    "                    print(\"⚽ Goal for Player 2!\")\n",
+    "                    goal_cooldown = 10\n",
+    "\n",
+    "                ball_inside_bottom_goal = False\n",
+    "                ball_inside_upper_goal = False\n",
+    "                missing_counter = 0\n",
+    "\n",
+    "        score_text = f\"Player 1 - {player1_score} | Player 2 - {player2_score}\"\n",
+    "        text_size, _ = cv2.getTextSize(score_text, cv2.FONT_HERSHEY_SIMPLEX, 1.2, 2)\n",
+    "        text_x = (warped.shape[1] - text_size[0]) // 2\n",
+    "        text_y = warped.shape[0] - 30\n",
+    "        cv2.putText(warped, score_text, (text_x, text_y), cv2.FONT_HERSHEY_SIMPLEX, 1.2, (0, 255, 255), 2)\n",
+    "\n",
     "        cv2.imshow(\"Detection\", warped)\n",
     "        if writer:\n",
     "            writer.write(warped)\n",
@@ -1040,11 +1124,19 @@
     "\n",
     "process_video_with_yolo_and_goals(Path(\"data/Match.mp4\"), Path(\"data/combined_output.mp4\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "752dcb14",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1058,7 +1150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
